@@ -314,7 +314,6 @@ string ResourceManager::strings[] = {
 "Automatically disconnect users who leave the hub (does not disconnect when hub goes down / you leave it)", 
 "Automatically search for alternative download locations", 
 "Automatically match queue for auto search hits", 
-"Use default search strings in auto search when no string is specified", 
 "Automatically refresh share list every hour", 
 "&Change", 
 "Clear search box after each search", 
@@ -791,7 +790,6 @@ string ResourceManager::names[] = {
 "SettingsAutoKick", 
 "SettingsAutoSearch", 
 "SettingsAutoSearchAutoMatch", 
-"SettingsAutoSearchAutoString", 
 "SettingsAutoUpdateList", 
 "SettingsChange", 
 "SettingsClearSearch", 
