@@ -317,7 +317,6 @@ enum Strings { // @DontAdd
 	SETTINGS_AUTO_KICK, // "Automatically disconnect users who leave the hub (does not disconnect when hub goes down / you leave it)"
 	SETTINGS_AUTO_SEARCH, // "Automatically search for alternative download locations"
 	SETTINGS_AUTO_SEARCH_AUTO_MATCH, // "Automatically match queue for auto search hits"
-	SETTINGS_AUTO_SEARCH_AUTO_STRING, // "Use default search strings in auto search when no string is specified"
 	SETTINGS_AUTO_UPDATE_LIST, // "Automatically refresh share list every hour"
 	SETTINGS_CHANGE, // "&Change"
 	SETTINGS_CLEAR_SEARCH, // "Clear search box after each search"
