@@ -438,7 +438,7 @@ LRESULT MainFrame::onSpeaker(UINT /*uMsg*/, WPARAM wParam, LPARAM lParam, BOOL& 
 		
 	if(wParam == DOWNLOAD_LISTING) {
 		DirectoryListInfo* i = (DirectoryListInfo*)lParam;
-		DirectoryListingFrame::openWindow(i->file, i->user, i->start);
+		DirectoryListingFrame::openWindow(i->file, i->user);
 		delete i;
 	} else if(wParam == VIEW_FILE_AND_DELETE) {
 		tstring* file = (tstring*)lParam;
@@ -1125,7 +1125,6 @@ void MainFrame::on(QueueManagerListener::Finished, QueueItem* qi) throw() {
 			DirectoryListInfo* i = new DirectoryListInfo();
 			i->file = Text::toT(qi->getListName());
 			i->user = qi->getCurrent()->getUser();
-			i->start = Text::toT(qi->getSearchString());
 
 			PostMessage(WM_SPEAKER, DOWNLOAD_LISTING, (LPARAM)i);
 		} else if(qi->isSet(QueueItem::FLAG_TEXT)) {
@@ -1136,5 +1135,5 @@ void MainFrame::on(QueueManagerListener::Finished, QueueItem* qi) throw() {
 
 /**
  * @file
- * $Id: MainFrm.cpp,v 1.67 2004/09/13 14:58:33 arnetheduck Exp $
+ * $Id: MainFrm.cpp,v 1.68 2004/09/24 20:48:28 arnetheduck Exp $
  */
